tests/fixtures/invalid/pow_int_dict_str.py
# Cannot call pow() with Int, Dict[str, int], Str
x = pow(1, {"a": 1}, "hello")
